--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,13 @@ on:
     branches: [main]
 
 jobs:
+  check-distributions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Check unique distributions names
+        run: ./.github/workflows/scripts/check_distro_names.sh
   build:
     name: Build
     runs-on: ubuntu-20.04
