--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   check-distributions:
+    name: Check distributions name
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
