--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -25,11 +25,9 @@ jobs:
       - name: Set and validate distribution name and version
         run: .github/workflows/scripts/set_version.sh
 
-      # - uses: docker/setup-qemu-action@v2
-      #   with:
-      #     platforms: arm64,ppc64le
+      - uses: docker/setup-qemu-action@v2
 
-      # - uses: docker/setup-buildx-action@v2
+      - uses: docker/setup-buildx-action@v2
 
       - uses: actions/setup-go@v3
         with:
@@ -44,13 +42,6 @@ jobs:
       #   with:
       #     username: ${{secrets.OHAI_DOCKER_HUB_ID}}
       #     password:  ${{secrets.OHAI_DOCKER_HUB_PASSWORD}}
-
-      # - name: Login to GitHub Package Registry
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.repository_owner }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: goreleaser/goreleaser-action@v4
         with:
