added packaging pipeline for pre-release (#5)
* added packaging pipeline for pre-release

--- a/.github/workflows/ci-goreleaser.yml
+++ b/.github/workflows/ci-goreleaser.yml
@@ -45,3 +45,5 @@ jobs:
         with:
           version: latest
           args: --snapshot --rm-dist --skip-sign --skip-sbom --timeout 2h
+        env:
+          GORELEASER_CURRENT_TAG: 0.0.0
