--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -24,6 +24,7 @@ archives:
       builds:
         - nr-otel-collector
       name_template: '{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}'
+
 nfpms:
     - package_name: nr-otel-collector
       contents:
@@ -94,3 +95,26 @@ docker_manifests:
       image_templates:
         - newrelic/opentelemetry-collector-releases/nr-otel-collector:latest-amd64
         - newrelic/opentelemetry-collector-releases/nr-otel-collector:latest-arm64
+
+publishers:
+  - name: GH Publisher
+    cmd: .github/workflows/scripts/gh_publisher.sh -t {{ .Env.NR_RELEASE_TAG }} -f {{ abs .ArtifactPath }}
+    env:
+      - GITHUB_TOKEN={{ .Env.GITHUB_TOKEN }}
+
+git:
+  # What should be used to sort tags when gathering the current and previous
+  # tags if there are more than one tag in the same commit.
+  #
+  # This is required because of the SemVer tag renaming.
+  #
+  # Default: `-version:refname`
+  tag_sort: -version:creatordate
+
+# Skip creating/updating gh release.
+release:
+  disable: true
+
+# Skip auto-generating changelog.
+changelog:
+  skip: true
