--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -37,11 +37,11 @@ jobs:
       - name: Generate distribution sources
         run: make generate-sources
 
-      # - name: Log into Docker.io
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{secrets.OHAI_DOCKER_HUB_ID}}
-      #     password:  ${{secrets.OHAI_DOCKER_HUB_PASSWORD}}
+      - name: Log into Docker.io
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKER_HUB_ID}}
+          password:  ${{secrets.DOCKER_HUB_PASSWORD}}
 
       - uses: goreleaser/goreleaser-action@v4
         with:
