--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -56,8 +56,7 @@ dockers:
       goarch: amd64
       dockerfile: distributions/nr-otel-collector/Dockerfile
       image_templates:
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:{{ .Version }}-amd64
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:latest-amd64
+        - newrelic/nr-otel-collector:{{ .Version }}-rc-amd64
       extra_files:
         - configs/nr-otel-collector.yaml
       build_flag_templates:
@@ -73,8 +72,7 @@ dockers:
       goarch: arm64
       dockerfile: distributions/nr-otel-collector/Dockerfile
       image_templates:
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:{{ .Version }}-arm64
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:latest-arm64
+        - newrelic/nr-otel-collector:{{ .Version }}-rc-arm64
       extra_files:
         - configs/nr-otel-collector.yaml
       build_flag_templates:
@@ -87,14 +85,10 @@ dockers:
         - --label=org.opencontainers.image.source={{.GitURL}}
       use: buildx
 docker_manifests:
-    - name_template: newrelic/opentelemetry-collector-releases/nr-otel-collector:{{ .Version }}
+    - name_template: newrelic/nr-otel-collector:{{ .Version }}-rc
       image_templates:
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:{{ .Version }}-amd64
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:{{ .Version }}-arm64
-    - name_template: newrelic/opentelemetry-collector-releases/nr-otel-collector:latest
-      image_templates:
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:latest-amd64
-        - newrelic/opentelemetry-collector-releases/nr-otel-collector:latest-arm64
+        - newrelic/nr-otel-collector:{{ .Version }}-rc-amd64
+        - newrelic/nr-otel-collector:{{ .Version }}-rc-arm64
 
 publishers:
   - name: GH Publisher
