--- a/.github/workflows/component_publish.yml
+++ b/.github/workflows/component_publish.yml
@@ -78,6 +78,10 @@ jobs:
           - "rpm"
           
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          
       - name: Set and validate distribution name and version
         run: .github/workflows/scripts/set_version.sh
 
