--- a/.github/workflows/component_publish.yml
+++ b/.github/workflows/component_publish.yml
@@ -24,6 +24,9 @@ on:
       TAG:
         required: true
         type: string
+      VERSION:
+        required: true
+        type: string
       AWS_S3_BUCKET_NAME:
         required: true
         type: string
@@ -48,6 +51,7 @@ env:
   GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
   GPG_PRIVATE_KEY_BASE64: ${{ secrets.GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
   TAG:  ${{ inputs.TAG }}
+  VERSION:  ${{ inputs.VERSION }}
   DOCKER_HUB_ID: ${{ secrets.DOCKER_HUB_ID }}
   DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
   SCHEMA_BRANCH: ${{ inputs.SCHEMA_BRANCH }}
@@ -81,7 +85,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
+
       - name: Set and validate distribution name and version
         run: .github/workflows/scripts/set_version.sh
 
@@ -96,6 +100,7 @@ jobs:
         uses: newrelic/infrastructure-publish-action@v1.2.6
         with:
           tag: ${{env.TAG}}
+          version: ${{env.VERSION}}
           app_name: "${{env.NR_DISTRO}}"
           repo_name: "newrelic/opentelemetry-collector-releases"
           schema: "custom"
