--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,7 +31,7 @@ archives:
  
 nfpms:
   - package_name: nr-otel-collector
-    file_name_template: '{{.ConventionalFileName}}+{{.PackageName}}+{{.Release}}'
+    file_name_template: '{{ .PackageName }}_{{ .Version }}_{{ .Os }}_{{ if filter .PackageName "\.rmp$" }}{{ replace .Arch "amd64" "x86_64" }}{{ else }}{{ .Arch }}{{ end }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}'
     contents:
       - src: distributions/nr-otel-collector/nr-otel-collector.service
         dst: /lib/systemd/system/nr-otel-collector.service
@@ -50,6 +50,7 @@ nfpms:
       - nr-otel-collector
     formats:
       - deb
+      - rpm
     maintainer: New Relic <caos-team@newrelic.com>
     description: OpenTelemetry Collector - nr-otel-collector
     license: Apache 2.0
