--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,7 +31,14 @@ archives:
  
 nfpms:
   - package_name: nr-otel-collector
-    file_name_template: '{{ .PackageName }}_{{ .Version }}_{{ .Os }}_{{ if filter .PackageName "\.rmp$" }}{{ replace .Arch "amd64" "x86_64" }}{{ else }}{{ .Arch }}{{ end }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}'
+    file_name_template: >-
+    {{ .PackageName }}_{{ .Version }}_{{ .Os }}_
+    {{- if eq .Os "linux"}}
+	    {{ replace .Arch "amd64" "x86_64" }}
+    {{else}}
+	    {{- .Arch}}
+    {{end}}
+
     contents:
       - src: distributions/nr-otel-collector/nr-otel-collector.service
         dst: /lib/systemd/system/nr-otel-collector.service
