--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -32,7 +32,12 @@ archives:
 nfpms:
   - package_name: nr-otel-collector
     file_name_template: >-
-      {{ .PackageName }}_{{ .Version }}_{{ .Os }}_{{ if eq .Os "linux" }}{{ replace .Arch "amd64" "x86_64" }}{{ else }}{{ .Arch }}{{ end }}
+      {{ .PackageName }}_{{ .Version }}_{{ .Os }}_
+      {{ if eq .Os "linux" }}
+      {{ replace .Arch "amd64" "x86_64" }}
+      {{ else }}
+      {{ .Arch }}
+      {{ end }}
 
     contents:
       - src: distributions/nr-otel-collector/nr-otel-collector.service
