--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,11 +29,21 @@ archives:
       - goos: windows
         format: zip
  
+#  {{- if not (eq (filter .ConventionalFileName "\.rpm$") "") }}
+#         {{- replace .Arch "amd64" "x86_64" }}
+#       {{ else }}
 nfpms:
   - package_name: nr-otel-collector
     file_name_template: >-
-      {{ .PackageName }}_{{ .Version }}_{{ .Os }}_
-      {{- if neq filter .ConventionalFileName "\.rpm$" "" }}test{{ end }}
+      {{ .PackageName }}_{{ .Version }}_{{ .Os }}_ 
+      {{- with (filter .ConventionalFileName "\.rpm$") }}
+        {{- replace .Arch "amd64" "x86_64" }}
+      {{ else }}
+        {{- .Arch }}
+      {{- end }}
+      {{- with .Arm }}v{{ . }}{{- end }}
+      {{- with .Mips }}_{{ . }}{{- end }}
+      {{- if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{- end }}
 
     contents:
       - src: distributions/nr-otel-collector/nr-otel-collector.service
