--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,7 +37,7 @@ nfpms:
   - package_name: nr-otel-collector
     file_name_template: >-
       {{ .PackageName }}_{{ .Version }}_{{ .Os }}_ 
-      {{- if (eq (title .Os) "Linux") }}
+      {{- if (eq (filter .ConventionalFileName "rpm") "") }}
         {{- .Os }}
       {{ else }}
         {{- .Arch }}
