--- a/.github/workflows/component_publish.yml
+++ b/.github/workflows/component_publish.yml
@@ -80,6 +80,7 @@ jobs:
       matrix:
         assetsType:
           - "targz"
+          - "zip"
           - "deb"
           - "rpm"
           
