--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -48,27 +48,27 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # publishing-to-s3:
-  #   name: Publish artifacts into s3 staging bucket
-  #   uses: ./.github/workflows/component_publish.yml
-  #   # needs: [prerelease]
-  #   secrets:
-  #     # TODO: Change all secrets var names from _TESTING to _STAGING after testing
-  #     DOCKER_HUB_ID: ${{secrets.CAOS_DOCKER_HUB_ID}}
-  #     DOCKER_HUB_PASSWORD: ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
-  #     GPG_PASSPHRASE: ${{ secrets.CAOS_GPG_PASSPHRASE }}
-  #     GPG_PRIVATE_KEY_BASE64: ${{ secrets.CAOS_GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.CAOS_AWS_ACCESS_KEY_ID_TESTING }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.CAOS_AWS_SECRET_ACCESS_KEY_TESTING }}
-  #     AWS_ROLE_ARN: ${{ secrets.CAOS_AWS_ROLE_ARN_TESTING }}
-  #     AWS_ROLE_SESSION_NAME: ${{ secrets.CAOS_AWS_ROLE_SESSION_NAME_TESTING }}
-  #   with:
-  #     ACCESS_POINT_HOST: "testing" # TODO: change this to staging after testing
-  #     SCHEMA_BRANCH: "upload_schemas"
-  #     RUN_ID: ${{ github.run_id }}
-  #     TAG: "nr-otel-collector-0.0.2"
-  #     APP_VERSION: "0.0.2"
-  #     #${{ github.event.release.tag_name }}
-  #     AWS_S3_BUCKET_NAME: "nr-downloads-ohai-testing"
-  #     AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-testing"
-  #     ASSETS_TYPE: "all"
+  publishing-to-s3:
+    name: Publish artifacts into s3 staging bucket
+    uses: ./.github/workflows/component_publish.yml
+    needs: [prerelease]
+    secrets:
+      # TODO: Change all secrets var names from _TESTING to _STAGING after testing
+      DOCKER_HUB_ID: ${{secrets.CAOS_DOCKER_HUB_ID}}
+      DOCKER_HUB_PASSWORD: ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+      GPG_PASSPHRASE: ${{ secrets.CAOS_GPG_PASSPHRASE }}
+      GPG_PRIVATE_KEY_BASE64: ${{ secrets.CAOS_GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
+      AWS_ACCESS_KEY_ID: ${{ secrets.CAOS_AWS_ACCESS_KEY_ID_TESTING }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.CAOS_AWS_SECRET_ACCESS_KEY_TESTING }}
+      AWS_ROLE_ARN: ${{ secrets.CAOS_AWS_ROLE_ARN_TESTING }}
+      AWS_ROLE_SESSION_NAME: ${{ secrets.CAOS_AWS_ROLE_SESSION_NAME_TESTING }}
+    with:
+      ACCESS_POINT_HOST: "testing" # TODO: change this to staging after testing
+      SCHEMA_BRANCH: "upload_schemas"
+      RUN_ID: ${{ github.run_id }}
+      TAG: "nr-otel-collector-0.0.2"
+      APP_VERSION: "0.0.2"
+      #${{ github.event.release.tag_name }}
+      AWS_S3_BUCKET_NAME: "nr-downloads-ohai-testing"
+      AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-testing"
+      ASSETS_TYPE: "all"
