--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,6 +31,8 @@ archives:
 
 nfpms:
   - package_name: nr-otel-collector
+
+    # Replace arch for rpm from amd64 to x86_64 to be consistent with our rpm repo.
     file_name_template: >-
       {{ .PackageName }}_{{ .Version }}_{{ .Os }}_ 
       {{- if not (eq (filter .ConventionalFileName "\\.rpm$") "") }}
