--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -64,11 +64,10 @@ jobs:
       AWS_ROLE_SESSION_NAME: ${{ secrets.CAOS_AWS_ROLE_SESSION_NAME_TESTING }}
     with:
       ACCESS_POINT_HOST: "testing" # TODO: change this to staging after testing
-      SCHEMA_BRANCH: "upload_schemas"
+      SCHEMA_BRANCH: "upload_schemas" # main
       RUN_ID: ${{ github.run_id }}
-      TAG: "nr-otel-collector-0.0.2"
-      APP_VERSION: "0.0.2"
-      #${{ github.event.release.tag_name }}
+      TAG: ${{ github.event.release.tag_name }}
+      APP_VERSION: ${{ env.NR_VERSION }}
       AWS_S3_BUCKET_NAME: "nr-downloads-ohai-testing"
       AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-testing"
       ASSETS_TYPE: "all"
