--- a/.github/workflows/component_publish.yml
+++ b/.github/workflows/component_publish.yml
@@ -24,9 +24,6 @@ on:
       TAG:
         required: true
         type: string
-      APP_VERSION:
-        required: true
-        type: string
       AWS_S3_BUCKET_NAME:
         required: true
         type: string
@@ -51,7 +48,6 @@ env:
   GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
   GPG_PRIVATE_KEY_BASE64: ${{ secrets.GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
   TAG:  ${{ inputs.TAG }}
-  APP_VERSION:  ${{ inputs.APP_VERSION }}
   DOCKER_HUB_ID: ${{ secrets.DOCKER_HUB_ID }}
   DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
   SCHEMA_BRANCH: ${{ inputs.SCHEMA_BRANCH }}
@@ -104,9 +100,9 @@ jobs:
         if: ${{ (env.ASSETS_TYPE == 'all' || env.ASSETS_TYPE == matrix.assetsType) }}
         uses: newrelic/infrastructure-publish-action@v1.2.6
         with:
-          tag: ${{env.TAG}}
-          app_version: ${{env.APP_VERSION}}
-          app_name: "${{env.NR_DISTRO}}"
+          tag: ${{ env.TAG }}
+          app_version: ${{ env.NR_VERSION }}
+          app_name: "${{ env.NR_DISTRO }}"
           repo_name: "newrelic/opentelemetry-collector-releases"
           schema: "custom"
           schema_url: "https://raw.githubusercontent.com/newrelic/opentelemetry-collector-releases/${{ env.SCHEMA_BRANCH }}/distributions/${{ env.NR_DISTRO }}/upload-schema-${{ matrix.os }}-${{ matrix.assetsType }}.yml"
