--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -10,10 +10,6 @@ on:
 jobs:
   prerelease:
     name: Pre-release
-    permissions:
-      id-token: write
-      packages: write
-      contents: write
 
     runs-on: ubuntu-20.04
 
@@ -40,13 +36,36 @@ jobs:
       - name: Log into Docker.io
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKER_HUB_ID}}
-          password:  ${{secrets.DOCKER_HUB_PASSWORD}}
+          username: ${{secrets.CAOS_DOCKER_HUB_ID}}
+          password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
 
-      - uses: goreleaser/goreleaser-action@v4
+      - name: Build binaries & packages with GoReleaser
+        uses: goreleaser/goreleaser-action@v4
         with:
           distribution: goreleaser
           version: latest
           args: release --rm-dist --timeout 2h
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publishing-to-s3:
+    name: Publish artifacts into s3 staging bucket
+    uses: ./.github/workflows/component_publish.yml
+    needs: [prerelease]
+    secrets:
+      DOCKER_HUB_ID: ${{secrets.CAOS_DOCKER_HUB_ID}}
+      DOCKER_HUB_PASSWORD: ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+      GPG_PASSPHRASE: ${{ secrets.CAOS_GPG_PASSPHRASE }}
+      GPG_PRIVATE_KEY_BASE64: ${{ secrets.CAOS_GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
+      AWS_ACCESS_KEY_ID: ${{ secrets.CAOS_AWS_ACCESS_KEY_ID_STAGING }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.CAOS_AWS_SECRET_ACCESS_KEY_STAGING }}
+      AWS_ROLE_ARN: ${{ secrets.CAOS_AWS_ROLE_ARN_STAGING }}
+      AWS_ROLE_SESSION_NAME: ${{ secrets.CAOS_AWS_ROLE_SESSION_NAME_STAGING }}
+    with:
+      ACCESS_POINT_HOST: "staging"
+      SCHEMA_BRANCH: "main"
+      RUN_ID: ${{ github.run_id }}
+      TAG: ${{ github.event.release.tag_name }}
+      AWS_S3_BUCKET_NAME: "nr-downloads-ohai-staging"
+      AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-staging"
+      ASSETS_TYPE: "all"
