--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -8,8 +8,31 @@ on:
       - '*'
 
 jobs:
-  release:
-    name: release
+  publishing-to-s3:
+    name: Publish artifacts into s3 production bucket
+    uses: ./.github/workflows/component_publish.yml
+
+    secrets:
+      # TODO: Change STAGING to production when testing is done
+      DOCKER_HUB_ID: ${{secrets.CAOS_DOCKER_HUB_ID}}
+      DOCKER_HUB_PASSWORD: ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+      GPG_PASSPHRASE: ${{ secrets.CAOS_GPG_PASSPHRASE }}
+      GPG_PRIVATE_KEY_BASE64: ${{ secrets.CAOS_GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
+      AWS_ACCESS_KEY_ID: ${{ secrets.CAOS_AWS_ACCESS_KEY_ID_STAGING }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.CAOS_AWS_SECRET_ACCESS_KEY_STAGING }}
+      AWS_ROLE_ARN: ${{ secrets.CAOS_AWS_ROLE_ARN_STAGING }}
+      AWS_ROLE_SESSION_NAME: ${{ secrets.CAOS_AWS_ROLE_SESSION_NAME_STAGING }}
+    with:
+      ACCESS_POINT_HOST: "staging"
+      SCHEMA_BRANCH: "main"
+      RUN_ID: ${{ github.run_id }}
+      TAG: ${{ github.event.release.tag_name }}
+      AWS_S3_BUCKET_NAME: "nr-downloads-ohai-staging"
+      AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-staging"
+      ASSETS_TYPE: "all"
+
+  release-docker:
+    name: Release docker images
 
     runs-on: ubuntu-20.04
 
@@ -24,8 +47,8 @@ jobs:
       - name: Log into Docker.io
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKER_HUB_ID}}
-          password:  ${{secrets.DOCKER_HUB_PASSWORD}}
+          username: ${{secrets.CAOS_DOCKER_HUB_ID}}
+          password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
 
       - name: Publish docker manifest
         run: .github/workflows/scripts/docker_manifest_release.sh -i newrelic/${{env.NR_DISTRO}} -v ${{env.NR_VERSION}}
