--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Set and validate distribution name and version
         run: .github/workflows/scripts/set_version.sh
 
-      - uses: docker/setup-qemu-action@v2
+      # - uses: docker/setup-qemu-action@v2
 
-      - uses: docker/setup-buildx-action@v2
+      # - uses: docker/setup-buildx-action@v2
 
       - uses: actions/setup-go@v3
         with:
@@ -33,11 +33,11 @@ jobs:
       - name: Generate distribution sources
         run: make generate-sources
 
-      - name: Log into Docker.io
-        uses: docker/login-action@v2
-        with:
-          username: ${{secrets.CAOS_DOCKER_HUB_ID}}
-          password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+      # - name: Log into Docker.io
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{secrets.CAOS_DOCKER_HUB_ID}}
+      #     password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
 
       - name: Build binaries & packages with GoReleaser
         uses: goreleaser/goreleaser-action@v4
@@ -72,10 +72,19 @@ jobs:
       ASSETS_TYPE: "all"
 
   packaging-tests:
-    name: Assert version of published packages
-    uses: ./.github/workflows/component_molecule_packaging.yml
+    runs-on: ubuntu-20.04
     needs: [publishing-to-s3]
-    with:
-      TAG: ${{ env.NR_VERSION }}
-      REPO_ENDPOINT: "http://nr-downloads-ohai-testing.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
-      PACKAGE_NAME: ${{ env.NR_DISTRO }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set and validate distribution name and go-version
+        run: .github/workflows/scripts/set_version.sh
+
+      - name: Assert version of published packages
+        uses: ./.github/workflows/component_molecule_packaging.yml
+        with:
+          TAG: ${{ env.NR_VERSION }}
+          REPO_ENDPOINT: "http://nr-downloads-ohai-testing.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
+          PACKAGE_NAME: ${{ env.NR_DISTRO }}
