--- a/configs/nr-otel-collector.yaml
+++ b/configs/nr-otel-collector.yaml
@@ -2,8 +2,6 @@
 
 extensions:
   health_check:
-  pprof:
-    endpoint: 0.0.0.0:1777
   zpages:
     endpoint: 0.0.0.0:55679
 
@@ -13,25 +11,14 @@ receivers:
       grpc:
       http:
 
-  opencensus:
-
   # Collect own metrics
   prometheus:
     config:
       scrape_configs:
-        - job_name: 'otel-collector'
+        - job_name: 'nr-otel-collector'
           scrape_interval: 10s
           static_configs:
             - targets: ['0.0.0.0:8888']
-
-  jaeger:
-    protocols:
-      grpc:
-      thrift_binary:
-      thrift_compact:
-      thrift_http:
-
-  zipkin:
 
 processors:
   batch:
@@ -45,13 +32,13 @@ service:
   pipelines:
 
     traces:
-      receivers: [otlp, opencensus, jaeger, zipkin]
+      receivers: [otlp]
       processors: [batch]
       exporters: [logging]
 
     metrics:
-      receivers: [otlp, opencensus, prometheus]
+      receivers: [otlp, prometheus]
       processors: [batch]
       exporters: [logging]
 
-  extensions: [health_check, pprof, zpages]
+  extensions: [health_check, zpages]
