feat: use valid configuration with defined components

--- a/.github/workflows/molecule_packaging_tag.yml
+++ b/.github/workflows/molecule_packaging_tag.yml
@@ -1,6 +1,5 @@
 name: 🚀 🧬 Test specific version installation
 on:
-  push:
   workflow_dispatch:
     inputs:
       package_name:
@@ -19,6 +18,6 @@ jobs:
   molecule-packaging-tests:
     uses: ./.github/workflows/component_molecule_packaging.yml
     with:
-      TAG: '0.0.6'
-      PACKAGE_NAME: 'nr-otel-collector'
+      TAG: ${{ github.event.inputs.tag }}
+      PACKAGE_NAME: ${{ github.event.inputs.package_name }}
       REPO_ENDPOINT: 'http://nr-downloads-ohai-testing.s3-website-us-east-1.amazonaws.com/infrastructure_agent'
