--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -72,10 +72,20 @@ jobs:
       ASSETS_TYPE: "all"
 
   packaging-tests:
-    name: Assert version of published packages
-    uses: ./.github/workflows/component_molecule_packaging.yml
+    runs-on: ubuntu-20.04
     needs: [publishing-to-s3]
-    with:
-      TAG: ${{ env.NR_VERSION }}
-      REPO_ENDPOINT: "http://nr-downloads-ohai-testing.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
-      PACKAGE_NAME: ${{ env.NR_DISTRO }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set and validate distribution name and go-version
+        run: .github/workflows/scripts/set_version.sh
+
+      - uses: newrelic/pkg-installation-testing-action@v1
+        with:
+          gpg_key: 'https://download.newrelic.com/infrastructure_agent/gpg/newrelic-infra.gpg'
+          repo_base_url: "http://nr-downloads-ohai-testing.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
+          package_name: ${{ env.NR_DISTRO }}
+          package_version: ${{ env.NR_VERSION }}
+          platforms: "al2,al2022,centos7,centos8,debian-bullseye,debian-buster,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204"
