--- a/test/canaries/deploy_canaries.yml
+++ b/test/canaries/deploy_canaries.yml
@@ -10,23 +10,23 @@
             extra_args: --ignore-installed
           - name: docker-compose
 
-- name: Run with inline Compose file version 3
+- name: Run containers with the provided images
   hosts: all
   gather_facts: true
   become: true
   tasks:
     - community.docker.docker_compose:
-        project_name: nr-otel-collector_canaries
+        project_name: otel-collector_canaries
         definition:
           version: '3'
           services:
             previous_collector:
-              container_name: "nr_otel_collector_previous"
-              image: "otel/opentelemetry-collector:{{ previous_version }}"
+              container_name: "otel_collector_previous"
+              image: "{{ previous_image }}"
               restart: always
             current_collector:
-              container_name: "nr_otel_collector_current"
-              image: "otel/opentelemetry-collector:{{ current_version }}"
+              container_name: "otel_collector_current"
+              image: "{{ current_image }}"
               restart: always
       register: output
 
@@ -35,5 +35,5 @@
 
     - ansible.builtin.assert:
         that:
-          - 'output.services.previous_collector.nr_otel_collector_previous.state.running'
-          - 'output.services.current_collector.nr_otel_collector_current.state.running'
+          - 'output.services.previous_collector.otel_collector_previous.state.running'
+          - 'output.services.current_collector.otel_collector_current.state.running'
