--- a/.github/workflows/provision_ec2_tag.yml
+++ b/.github/workflows/provision_ec2_tag.yml
@@ -31,7 +31,7 @@ jobs:
         uses: newrelic/fargate-runner-action@docker_repo_to_clone
         with:
           aws_region: us-east-2
-          container_make_target: make terraform/provision-ec2 TF_VAR_inventory_output="/srv/runner/inventory/${{ env.GIT_REF }}/inventory.ec2" TERRAFORM_BACKEND=${{ env.GIT_REF }}
+          container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output='/srv/runner/inventory/${{ env.GIT_REF }}/inventory.ec2' TERRAFORM_BACKEND=${{ env.GIT_REF }}"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
@@ -39,3 +39,4 @@ jobs:
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
           action_id: "${{ env.GITHUB_RUN_ID }}_${{ env.GITHUB_RUN_NUMBER }}_${{ env.GITHUB_JOB }}"
+          ref: "terraform_ec2"
