add dist for tfvars

--- a/ci/terraform/caos.auto.tfvars.dist
+++ b/ci/terraform/caos.auto.tfvars.dist
@@ -1,5 +1,5 @@
 ec2_otels = {
-	"caos-amd64-ubuntu22.04-otel" = {
+	"otel-TAG_OR_UNIQUE_NAME-amd64-ubuntu22.04" = {
 		ami = "ami-0aeb7c931a5a61206"
 		subnet="subnet-09b64de757828cdd4"
 		security_groups=["sg-044ef7bc34691164a"]
